fixed grid cells wrapping to next line by including border box in game-grid div

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ ol {
 
 #game-grid {/* targeting the full container/the outer wrapper holding all the grid squares */
     display: flex; /* to arrange cells in the grid*/
-    flex-wrap: wrap; /* to arrange cells in the grid*/
+    flex-wrap: wrap; /* to arrange cells in the grid */
     width: 600px; /*sets grid size - fixed width for 12 columns so grid has stability depending on screen size */
     margin: 0 auto; /* to center the grid on the page & fixes left alignment issue*/
 
@@ -185,6 +185,7 @@ ol {
     width: calc(100% / 12); /* makes every cell exactly 50px wide (600 divided by 12) */
     height: 50px;  /* keeps height 50px for 4 rows - not sure why height in px works but height in % doesn't */
     border: 1px solid rgb(17, 111, 142); /* for cell outlines */
+    box-sizing: border-box; /* ensures borders are included in width */
 }
 
 #game-grid div.cybertruck {
